--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./styles.css">
 
     <title>Frontend Mentor | Stats preview card component</title>
@@ -15,13 +16,37 @@
 
     <main>
 
+        <div class="card">
+            <div class="card--image"></div>
+            <div class="card--content">
+                <div class="intro">
+                    <h1>Get <span>insights</span> that help your business grow.</h1>
+                    <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                        experience, and overall efficiency.</p>
+                </div>
+                <div class="stats">
+                    <div class="column">
+                        <h2>10k+</h2>
+                        <p>companies</p>
+                    </div>
+                    <div class="column">
+                        <h2>314</h2>
+                        <p>templates</p>
+                    </div>
+                    <div class="column">
+                        <h2>12M+</h2>
+                        <p>queries</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Your Name Here</a>.
+            Coded by <a href="#">Yasmine De Wolf</a>.
         </div>
     </footer>
 
